--- a/style.css
+++ b/style.css
@@ -102,3 +102,46 @@ span{
     color:#000000ba; 
     line-height:0px;
 }
+
+@media screen and (max-width:900px){
+    body{
+        background-image: url("mobileBG.jpg");
+        background-size: contain;
+        padding-top:10px;
+    }
+    h1{
+        font-size: 20px;
+    }
+    #playerX{
+        left:10px;
+        top:50px;
+        font-size: 20px;
+    }
+
+    .papper{
+        margin-top:70px;
+        grid-template-columns: 80px 80px 80px;
+        grid-template-rows: 80px 80px 80px;
+    }
+    .papper div{
+        width:80px;
+        height:80px;
+
+        font-size: 50px;
+        line-height: 50px;
+    }
+
+    #result{
+        position:absolute;
+        bottom:100px;
+        font-size:30px;
+    }
+    #resetDIV{
+        position:absolute;
+        bottom:30px;
+    }
+    span{
+        font-size:30px;
+    }
+
+}
